# AI-youtubeTV-Roku

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: __init__.py
backend/ai/: __init__.py
backend/api/: __init__.py
backend/database/: __init__.py
backend/models/: __init__.py
backend/planner/: __init__.py
backend/roku/: __init__.py
backend/tests/: __init__.py  test_skeleton.py
backend/updater/: __init__.py
backend/utils/: __init__.py
config/: config.example.toml  logging.example.toml
docs/: api.md  architecture.md  database.md  development.md  planner.md  roku.md  testing.md  updater.md
frontend/assets/: README.md
frontend/roku-app/: README.md
scripts/: lint
